templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
    kubernetes.io/ingress.global-static-ip-name: argo
    networking.gke.io/managed-certificates: argocd
spec:
  rules:
    - host: argo.datumforge.app
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: argocd-server
              port:
                number: 80
